# cookiecutter-fortran-cmake

./: LICENSE  README.rst  cookiecutter.json
.github/workflows/: ci.yml
test/: test_project  test_repository
{{cookiecutter.project_name|lower}}/: CMakeLists.txt  README.rst  config.cmake
{{cookiecutter.project_name|lower}}/.github/workflows/: ci.yml
{{cookiecutter.project_name|lower}}/app/: CMakeLists.txt  {{cookiecutter.project_name|lower}}app.f90
{{cookiecutter.project_name|lower}}/cmake/export/: {{cookiecutter.project_name|lower}}-config.cmake.in
{{cookiecutter.project_name|lower}}/src/: CMakeLists.txt  {{cookiecutter.project_name|lower}}.f90
{{cookiecutter.project_name|lower}}/src/{{cookiecutter.project_name|lower}}/: CMakeLists.txt  version.f90
{{cookiecutter.project_name|lower}}/test/integration/: CMakeLists.txt  test_build.f90
{{cookiecutter.project_name|lower}}/test/src/: CMakeLists.txt  test_version.f90
